--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="index.html"></a>
-            <img src="assets/images/logo (4).svg" alt="ford logo">
+            <img src="images/logo (4).svg" alt="ford logo">
         </div>
         <nav>
             <ul>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="photo-section">
-          <img src="assets/images/Rectangle 7 (1).svg" alt="tree cars">
+          <img src="images/Rectangle 7 (1).svg" alt="tree cars">
         </section>
         <article>
             <section-1 class="About">
@@ -40,15 +40,15 @@
             </div>
         </section>
         <div class="car-photo">
-            <img src="assets/Rectangle 11 (2).svg" alt="an old ford car">
+            <img src="Rectangle 11 (2).svg" alt="an old ford car">
         </div>
         </article>
     </main>
     <footer class="footer-box">
         <div class="logo-container">
-           <img src="assets/images/facebook-messenger (3).svg" alt="Logo-1">
-           <img src="assets/images/instagram (3).svg" alt="Logo-2">
-           <img src="assets/images/youtube (5).svg" alt="Logo-3">
+           <img src="images/facebook-messenger (3).svg" alt="Logo-1">
+           <img src="images/instagram (3).svg" alt="Logo-2">
+           <img src="images/youtube (5).svg" alt="Logo-3">
         </div>
             <div class="copywright">
                <p>copywriht Lorem ipsum sit amet.</p>
