--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <a href="index.html"></a>
-            <img src="assets/images/logo (4).svg" alt="ford logo">
+            <img src="images/logo (4).svg" alt="ford logo">
         </div>
         <nav>
             <ul>
@@ -22,19 +22,19 @@
     </header>
     <main>
         <section class="photo-section">
-            <img src="assets/images/Rectangle 19 (6).svg" alt="a blue car photo">
+            <img src="images/Rectangle 19 (6).svg" alt="a blue car photo">
         </section>
         <section class="contact">
             <h2>CONTACT US</h2>
             <p>We're here to help. Feel free to contact us with questions, comments, and ideas.</p>
         </section>
-        <img src="assets/images/section (2).svg" ali="contact&map">
+        <img src="images/section (2).svg" ali="contact&map">
     </main>
     <footer class="footer-box">
         <div class="logo-container">
-           <img src="assets/images/facebook-messenger (3).svg" alt="Logo-1">
-           <img src="assets/images/instagram (3).svg" alt="Logo-2">
-           <img src="assets/images/youtube (5).svg" alt="Logo-3">
+           <img src="images/facebook-messenger (3).svg" alt="Logo-1">
+           <img src="images/instagram (3).svg" alt="Logo-2">
+           <img src="images/youtube (5).svg" alt="Logo-3">
         </div>
             <div class="copywright">
                <p>copywriht Lorem ipsum sit amet.</p>
