--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html"></a>
-            <img src="images/logo (4).svg" alt="ford logo">
+            <img src="logo (4).svg" alt="ford logo">
         </div>
         <nav>
             <ul>
