--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="photo-section">
-          <img src="images/Rectangle 7 (1).svg" alt="tree cars">
+          <img src="Rectangle 7 (1).svg" alt="tree cars">
         </section>
         <article>
             <section-1 class="About">
@@ -46,9 +46,9 @@
     </main>
     <footer class="footer-box">
         <div class="logo-container">
-           <img src="images/facebook-messenger (3).svg" alt="Logo-1">
-           <img src="images/instagram (3).svg" alt="Logo-2">
-           <img src="images/youtube (5).svg" alt="Logo-3">
+           <img src="facebook-messenger (3).svg" alt="Logo-1">
+           <img src="instagram (3).svg" alt="Logo-2">
+           <img src="youtube (5).svg" alt="Logo-3">
         </div>
             <div class="copywright">
                <p>copywriht Lorem ipsum sit amet.</p>
