--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <a href="index.html"></a>
-            <img src="images/logo (4).svg" alt="ford logo">
+            <img src="logo (4).svg" alt="ford logo">
         </div>
         <nav>
             <ul>
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="photo-section">
-            <img src="images/Rectangle 10 (2).svg" alt="man&woman photo">
+            <img src="Rectangle 10 (2).svg" alt="man&woman photo">
         </section>
         <section class="welcome-section">
             <h2>WELCOME</h2>
@@ -32,21 +32,21 @@
         </section>
         <section class="three-pictures-section">
             <div class="picture-1">
-            <img src="images/Rectangle 16 (3).svg" alt="a red car">
+            <img src="Rectangle 16 (3).svg" alt="a red car">
         </div>
         <div class="picture-2">
-            <img src="images/Rectangle 17 (1).svg" alt="a blue car">
+            <img src="Rectangle 17 (1).svg" alt="a blue car">
         </div>
         <div class="picture-3">
-            <img src="images/Rectangle 18 (2).svg" alt="an aquamrine car">
+            <img src="Rectangle 18 (2).svg" alt="an aquamrine car">
         </div>
     </section>
  </main>
  <footer class="footer-box">
  <div class="logo-container">
-    <img src="images/facebook-messenger (3).svg" alt="Logo-1">
-    <img src="images/instagram (3).svg" alt="Logo-2">
-    <img src="images/youtube (5).svg" alt="Logo-3">
+    <img src="facebook-messenger (3).svg" alt="Logo-1">
+    <img src="instagram (3).svg" alt="Logo-2">
+    <img src="youtube (5).svg" alt="Logo-3">
  </div>
      <div class="copywright">
         <p>copywriht Lorem ipsum sit amet.</p>
