--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <div class="logo-container">
            <img src="facebook-messenger (3).svg" alt="Logo-1">
            <img src="instagram (3).svg" alt="Logo-2">
-           <img src="youtube (5).svg" alt="Logo-3">
+           <img src="youtube (5).svg" alt="Logo-3"/>
         </div>
             <div class="copywright">
                <p>copywriht Lorem ipsum sit amet.</p>
