--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="reset.css"/>
+    <link rel="stykesheet" href="responsive.css"/>
 </head>
 <body>
     <header>
@@ -48,7 +50,7 @@
         <div class="logo-container">
            <img src="facebook-messenger (3).svg" alt="Logo-1">
            <img src="instagram (3).svg" alt="Logo-2">
-           <img src="youtube (5).svg" alt="Logo-3"/>
+           <img src="youtube (5).svg" alt="Logo-3">
         </div>
             <div class="copywright">
                <p>copywriht Lorem ipsum sit amet.</p>
