--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
            <img src="youtube (5).svg" alt="Logo-3">
         </div>
             <div class="copywright">
-               <p>copywriht Lorem ipsum sit amet.</p>
+               <p>copyright Lorem ipsum sit amet.</p>
             </div>
         </footer>
 </body>
