--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
            <img src="instagram (3).svg" alt="Logo-2">
            <img src="youtube (5).svg" alt="Logo-3">
         </div>
-            <div class="copywright">
+            <div class="copyright">
                <p>copyright Lorem ipsum sit amet.</p>
             </div>
         </footer>
