--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,6 @@
            <img src="youtube (5).svg" alt="Logo-3">
         </div>
             <div class="copywright">
-               <p>copywriht Lorem ipsum sit amet.</p>
+               <p>copyright Lorem ipsum sit amet.</p>
             </div>
         </footer>
