--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
         <div class="logo-container">
            <img src="facebook-messenger (3).svg" alt="Logo-1">
            <img src="instagram (3).svg" alt="Logo-2">
-           <img src="youtube (5).svg" alt="Logo-3">
+           <img src="" alt="Logo-3youtube (1).svg">
+
         </div>
             <div class="copywright">
                <p>copyright Lorem ipsum sit amet.</p>
