--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <div class="logo-container">
            <img src="facebook-messenger (3).svg" alt="Logo-1">
            <img src="instagram (3).svg" alt="Logo-2">
-           <img src="youtube (5).svg" alt="Logo-3">
+           <img src="youtube (1).svg">
         </div>
             <div class="copyright">
                <p>copyright Lorem ipsum sit amet.</p>
