--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  <div class="logo-container">
     <img src="facebook-messenger (3).svg" alt="Logo-1">
     <img src="instagram (3).svg" alt="Logo-2">
-    <img src="a youtube (1).svg" alt="Logo-3">
+    <img src="youtube (1).svg" alt="Logo-3">
  </div>
      <div class="copywright">
         <p>copywriht Lorem ipsum sit amet.</p>
