--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <div class="logo-container">
            <img src="facebook-messenger (3).svg" alt="Logo-1">
            <img src="instagram (3).svg" alt="Logo-2">
-           <img src="" alt="Logo-3youtube (1).svg">
+           <img src="youtube (1).svg"> alt="Logo-3">
 
         </div>
             <div class="copywright">
