--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,13 @@
             <h2>CONTACT US</h2>
             <p>We're here to help. Feel free to contact us with questions, comments, and ideas.</p>
         </section>
-        <img src="section (2).svg" ali="contact&map">
+        <img src="section (2).svg" alt="contact&map">
     </main>
     <footer class="footer-box">
         <div class="logo-container">
            <img src="facebook-messenger (3).svg" alt="Logo-1">
            <img src="instagram (3).svg" alt="Logo-2">
-           <img src="youtube (1).svg">
+           <img src="youtube (1).svg"
 
         </div>
             <div class="copywright">
